<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/root_layout"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:onClick="onClick"
    android:background="@drawable/background">
	<LinearLayout
		android:id="@+id/recorded_notes"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
		android:onClick="onClick"
		android:paddingBottom="20dp"
		android:orientation="horizontal">
	    <TextView 
	    		android:id="@+id/text_you_have"
	        	android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
	        	android:text="@string/you_have"
	        	android:textSize="20dp"
	        	android:gravity="right" />
	   <TextView
	   			android:id="@+id/text_number_of_notes"
	       		android:layout_width="wrap_content"
	       		android:layout_height="wrap_content"
	       		android:layout_weight="0"
	       		android:text="15"
	       		android:background="@drawable/speech_balloon"
	       		android:gravity="center"
	       		android:textColor="#000"
	       		android:textSize="20dp" />
	   <TextView
	   			android:id="@+id/text_notes"
	           	android:layout_width="fill_parent"
	           	android:layout_height="wrap_content"
	        	android:text="@string/notes"
	           	android:layout_weight="1"
	           	android:gravity="left"
	           	android:textSize="20dp" />
	</LinearLayout>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:gravity="center"
		android:layout_weight="1">
		<TextView
			android:id="@+id/text_recording"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/ready_to_record"
        	android:gravity="center"
        	android:textSize="40dp"
        	android:layout_marginTop="20dp" />
        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
        <ImageView
        	android:id="@+id/pulsating_image"
        	android:layout_width="wrap_content"
        	android:layout_height="65dp"
        	android:layout_margin="20dp" />
    </LinearLayout>
	<LinearLayout
	    android:id="@+id/layout_text"
	    android:onClick="onClick"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingTop="10dp"
	    android:paddingBottom="20dp">
	    <TextView
	    		android:id="@+id/text_instructions1"
	        	android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:gravity="center"
	        	android:text="@string/instructions1_recording" />
	   <TextView
	   			android:id="@+id/text_instructions2"
	       		android:layout_width="fill_parent"
	       		android:layout_height="wrap_content"
	       		android:gravity="center"
	       		android:text="@string/instructions2_recording" />
	   <TextView
	   			android:id="@+id/text_instructions3"
	           	android:layout_width="fill_parent"
	           	android:layout_height="wrap_content"
	           	android:gravity="center"
	           	android:text="@string/instructions3_recording" />        
	</LinearLayout>
</LinearLayout>